# calculate_account_names_similarity_rs

./: .gitignore  Cargo.toml  README.md
src/: algorithm.rs  analyze_account_name_similarity.rs  group_account_name_by_similarity.rs  lib.rs
test_data/: test_account_list.txt
